# Stormhelm

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  voice_visual_meter_probe_report.json
config/: default.toml  development-live-browser.toml.example  development.toml.example
docs/: README.md  architecture-overview.md  architecture.md  camera-awareness.md  commands.md  data-model.md  development.md  discord-relay-live-local-client.md  examples.md  features.md  integrations.md  latency-integration-audit.md  latency-l10-gates.md  latency-tracing.md  live-browser-integration.md  obscura-cdp-diagnostics.md  packaging.md  phase1-2-review.md  planner-routing.md  roadmap.md  route-hot-path-audit-l63c.json  route-hot-path-audit-l63c.md  screen-awareness-playwright-adapter.md  security-and-trust.md  settings.md  subsystems.md  testing-evaluation.md  troubleshooting.md  ui-surfaces.md  usage.md  voice-0-foundation.md  voice-c1-release-readiness.md  voice.md
reports/: l7_render_smoke_headless.json  l7_render_smoke_live_qml.json  l7_render_smoke_live_qml_1.json
scripts/: build_250_remediation_artifacts.py  build_ambiguous_deictic_artifacts.py  build_context_arbitration_artifacts.py  build_generalization_overcapture_2_artifacts.py  build_generalization_overcapture_artifacts.py  build_latency_routing_readiness_gate.py  build_planner_v2_stabilization_1.py  build_planner_v2_stabilization_2.py  build_readiness_pass_3_artifacts.py  build_route_spine_translation_audit.py  build_router_architecture_reset_artifacts.py  build_router_architecture_reset_gate.py  build_routing_gap_burndown_1.py  dev_launch.ps1  finalize_250_remediation_report.py  live_runtime_latency_trace.py  package_installer.ps1  package_portable.ps1  prove_command_eval_hard_timeout.py  render_reports_pdf.py  reproduce_routine_save_latency.py  run_250_checkpoint.py  run_250_readiness_cleanup.py  run_250_remediation_eval.py  run_ambiguous_deictic_lanes.py  run_baseline_sanity_kraken.py  run_camera_awareness_kraken.py  run_command_usability_eval.py  run_context_arbitration_pass.py  run_context_binding_completion.py  run_core.ps1  run_cross_context_visual_kraken.py  run_current_screen_live_probe.py  run_focused_80_post_hardening.py  run_full_kraken.py  run_generalization_overcapture_pass.py  run_generalization_overcapture_pass_2.py  run_kraken_context_model_audit.py  run_l7_render_smoke.py  run_latency_attribution_tiny_suite.py  (+49 more)
tests/: conftest.py  test_adapter_contracts.py  test_app_window_graceful_close.py  test_assistant_orchestrator.py  test_assistant_software_control.py  test_baseline_sanity_correctness_remediation.py  test_baseline_sanity_provider_route_selection.py  test_bridge_authority.py  test_browser_destination_resolution.py  test_calculations.py  test_camera_awareness_c0.py  test_camera_awareness_c01_hardening.py  test_camera_awareness_c11_artifact_readiness.py  test_camera_awareness_c1_real_capture.py  test_camera_awareness_c21_boundary_hardening.py  test_camera_awareness_c2_vision_provider.py  test_camera_awareness_c3_ghost_ux.py  test_camera_awareness_c4_deck_workspace.py  test_camera_awareness_c5_engineering_helpers.py  test_camera_awareness_c6_multi_capture_comparison.py  test_camera_awareness_c7_guided_capture.py  (+244 more)
(+433 files in other folders)
